# IGI

./: .dockerignore  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
API/: .gitignore  Dockerfile  Gemfile
API/app/controllers/: application_controller.rb  search_controller.rb
API/app/views/search/: index.html.erb
API/config/: application.rb  credentials.yml.enc  master.key  routes.rb
API/tmp/cache/bootsnap/: load-path-cache
API/tmp/cache/bootsnap/compile-cache-iseq/00/: 09e65de131943c  165c157937bf1c  2863e7105e8e15  a44ffb2ee92db6
API/tmp/cache/bootsnap/compile-cache-iseq/01/: 1540d13fd4ea83  1d2db658c2c623  2d9c22dfa731a2  33497b71730cf4  3b9ffd3a8dd74a  3dfeed57406eae  5000efb48b74df  695d96954f8891  8c15cb5d84f6c3  a0f1174e2cebbd  ba4211d931e8e0  cd741f466393dc
API/tmp/cache/bootsnap/compile-cache-iseq/02/: 0220317a06e1b4  0e25415af25965  2079d72f8d1c12  28650f0bf108cb  468401020c29bd  57a98eaf7a399d  5af830b38355d8  71eb9ef570469a  ed39105138b5f1
API/tmp/cache/bootsnap/compile-cache-iseq/03/: 3cd9925f24427c  43cfd31f43b402  8bdd5ae99a71f0  99682c7b735685  c90322a24afcc6  d0fce3e0be1b72
cpp/crawler/: CMakeCache.txt  Dockerfile
cpp/crawler/src/: CMakeLists.txt  main.cpp  warc_writer.cpp  warc_writer.hpp
cpp/indexer/: Dockerfile
cpp/indexer/src/: CMakeLists.txt  main.cpp  utils.cpp  utils.hpp
cpp/indexer/tests/: test_integration.cpp  test_utils.cpp
data/: init.sql
python/ranker/: Dockerfile  app.py  engine.py  requirements.txt  rocksdb_client.cpp  setup.py
rails/: Dockerfile
(+1522 files in other folders)
